--- a/.buildkite/pipelines/pull_request/base.yml
+++ b/.buildkite/pipelines/pull_request/base.yml
@@ -44,6 +44,7 @@ steps:
           limit: 1
 
   - command: .buildkite/scripts/steps/test/pick_test_group_run_order.sh
+    if: build.branch == "main"
     label: 'Pick Test Group Run Order'
     agents:
       queue: kibana-default
@@ -57,7 +58,25 @@ steps:
         - exit_status: '*'
           limit: 1
 
+  # Only run serverless tests on main
+  - command: .buildkite/scripts/steps/test/pick_test_group_run_order.sh
+    if: build.branch != "main"
+    label: 'Pick Test Group Run Order'
+    agents:
+      queue: kibana-default
+    timeout_in_minutes: 10
+    env:
+      JEST_UNIT_SCRIPT: '.buildkite/scripts/steps/test/jest.sh'
+      JEST_INTEGRATION_SCRIPT: '.buildkite/scripts/steps/test/jest_integration.sh'
+      FTR_CONFIGS_SCRIPT: '.buildkite/scripts/steps/test/ftr_configs.sh'
+      FTR_CONFIG_PATTERNS: '!x-pack/test_serverless/**'
+    retry:
+      automatic:
+        - exit_status: '*'
+          limit: 1
+
   - command: .buildkite/scripts/steps/functional/security_serverless.sh
+    if: build.branch == "main"
     label: 'Serverless Security Cypress Tests'
     agents:
       queue: n2-4-spot
@@ -70,6 +89,7 @@ steps:
           limit: 1
 
   - command: .buildkite/scripts/steps/functional/security_serverless_explore.sh
+    if: build.branch == "main"
     label: 'Serverless Explore - Security Solution Cypress Tests'
     agents:
       queue: n2-4-spot
@@ -82,6 +102,7 @@ steps:
           limit: 1
 
   - command: .buildkite/scripts/steps/functional/security_serverless_investigations.sh
+    if: build.branch == "main"
     label: 'Serverless Investigations - Security Solution Cypress Tests'
     agents:
       queue: n2-4-spot
@@ -92,6 +113,7 @@ steps:
       automatic:
         - exit_status: '*'
           limit: 1
+
 
   - command: .buildkite/scripts/steps/functional/security_solution.sh
     label: 'Security Solution Cypress Tests'
