--- a/.buildkite/pipelines/pull_request/base.yml
+++ b/.buildkite/pipelines/pull_request/base.yml
@@ -60,7 +60,7 @@ steps:
 
   # Only run serverless tests on main
   - command: .buildkite/scripts/steps/test/pick_test_group_run_order.sh
-    if: build.branch == "main"
+    if: build.pull_request.base_branch == "main"
     label: 'Pick Test Group Run Order'
     agents:
       queue: kibana-default
@@ -76,7 +76,7 @@ steps:
           limit: 1
 
   - command: .buildkite/scripts/steps/functional/security_serverless.sh
-    if: build.branch == "main"
+    if: build.pull_request.base_branch == "main"
     label: 'Serverless Security Cypress Tests'
     agents:
       queue: n2-4-spot
@@ -89,7 +89,7 @@ steps:
           limit: 1
 
   - command: .buildkite/scripts/steps/functional/security_serverless_explore.sh
-    if: build.branch == "main"
+    if: build.pull_request.base_branch == "main"
     label: 'Serverless Explore - Security Solution Cypress Tests'
     agents:
       queue: n2-4-spot
@@ -102,7 +102,7 @@ steps:
           limit: 1
 
   - command: .buildkite/scripts/steps/functional/security_serverless_investigations.sh
-    if: build.branch == "main"
+    if: build.pull_request.base_branch == "main"
     label: 'Serverless Investigations - Security Solution Cypress Tests'
     agents:
       queue: n2-4-spot
