--- a/package.json
+++ b/package.json
@@ -321,7 +321,7 @@
     "prop-types": "^15.7.2",
     "proxy-from-env": "1.0.0",
     "puid": "1.0.7",
-    "puppeteer": "20.1.0",
+    "puppeteer": "21.3.6",
     "query-string": "^6.13.2",
     "random-word-slugs": "^0.0.5",
     "raw-loader": "^3.1.0",
@@ -446,7 +446,7 @@
     "@elastic/eslint-plugin-eui": "0.0.2",
     "@elastic/github-checks-reporter": "0.0.20b3",
     "@elastic/makelogs": "^6.1.1",
-    "@elastic/synthetics": "~1.0.0-beta.39",
+    "@elastic/synthetics": "~1.0.0",
     "@emotion/babel-preset-css-prop": "^11.11.0",
     "@emotion/jest": "^11.3.0",
     "@istanbuljs/schema": "^0.1.2",
@@ -785,7 +785,7 @@
     "pixelmatch": "^5.3.0",
     "playwright": "^1.17.1",
     "pngjs": "^3.4.0",
-    "postcss": "^8.4.14",
+    "postcss": "^8.4.31",
     "postcss-loader": "^4.2.0",
     "postcss-prefix-selector": "^1.16.0",
     "prettier": "^2.7.1",
