--- a/x-pack/plugins/observability_onboarding/tsconfig.json
+++ b/x-pack/plugins/observability_onboarding/tsconfig.json
@@ -34,6 +34,7 @@
     "@kbn/share-plugin",
     "@kbn/deeplinks-observability",
     "@kbn/fleet-plugin",
+    "@kbn/core-application-browser",
   ],
   "exclude": [
     "target/**/*",
