[CI] Auto-commit changed files from 'node scripts/lint_ts_projects --fix'

--- a/packages/kbn-search-response-warnings/tsconfig.json
+++ b/packages/kbn-search-response-warnings/tsconfig.json
@@ -9,6 +9,9 @@
     "@kbn/i18n",
     "@kbn/inspector-plugin",
     "@kbn/core",
+    "@kbn/i18n-react",
+    "@kbn/es-types",
+    "@kbn/kibana-react-plugin",
   ],
   "exclude": ["target/**/*"]
 }
