--- a/x-pack/plugins/metrics_data_access/kibana.jsonc
+++ b/x-pack/plugins/metrics_data_access/kibana.jsonc
@@ -6,10 +6,15 @@
   "plugin": {
     "id": "metricsDataAccess",
     "server": true,
-    "browser": false,
+    "browser": true,
     "configPath": ["xpack", "metrics_data_access"],
-    "requiredPlugins": ["data"],
-    "requiredBundles": [],
+    "requiredPlugins": [
+      "data",
+      "observabilityShared"
+    ],
+    "requiredBundles": [
+      "kibanaReact"
+    ],
     "extraPublicDirs": []
   }
 }
