--- a/config/serverless.oblt.yml
+++ b/config/serverless.oblt.yml
@@ -10,6 +10,7 @@ xpack.legacy_uptime.enabled: false
 
 ## Enable the Serverless Observability plugin
 xpack.serverless.observability.enabled: true
+xpack.observability.unsafe.thresholdRule.enabled: false
 
 ## Configure plugins
 
