[CI] Auto-commit changed files from 'node scripts/lint_ts_projects --fix'

--- a/packages/kbn-search-response-warnings/tsconfig.json
+++ b/packages/kbn-search-response-warnings/tsconfig.json
@@ -11,7 +11,7 @@
     "@kbn/core",
     "@kbn/i18n-react",
     "@kbn/es-types",
-    "@kbn/kibana-react-plugin",
+    "@kbn/react-kibana-mount",
   ],
   "exclude": ["target/**/*"]
 }
