[CI] Auto-commit changed files from 'node scripts/lint_ts_projects --fix'

--- a/packages/kbn-search-response-warnings/tsconfig.json
+++ b/packages/kbn-search-response-warnings/tsconfig.json
@@ -12,6 +12,7 @@
     "@kbn/i18n-react",
     "@kbn/es-types",
     "@kbn/react-kibana-mount",
+    "@kbn/core-i18n-browser",
   ],
   "exclude": ["target/**/*"]
 }
