--- a/package.json
+++ b/package.json
@@ -517,6 +517,7 @@
     "@kbn/management-settings-section-registry": "link:packages/kbn-management/settings/section_registry",
     "@kbn/management-settings-types": "link:packages/kbn-management/settings/types",
     "@kbn/management-settings-utilities": "link:packages/kbn-management/settings/utilities",
+    "@kbn/management-storybook-demo": "link:packages/kbn-management/storybook_demo",
     "@kbn/management-test-plugin": "link:test/plugin_functional/plugins/management_test_plugin",
     "@kbn/mapbox-gl": "link:packages/kbn-mapbox-gl",
     "@kbn/maps-custom-raster-source-plugin": "link:x-pack/examples/third_party_maps_source_example",
