--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -497,6 +497,7 @@ packages/kbn-management/settings/section_registry @elastic/appex-sharedux @elast
 packages/kbn-management/settings/types @elastic/platform-deployment-management
 packages/kbn-management/settings/utilities @elastic/platform-deployment-management
 packages/kbn-management/storybook/config @elastic/platform-deployment-management
+packages/kbn-management/storybook_demo @elastic/platform-deployment-management
 test/plugin_functional/plugins/management_test_plugin @elastic/platform-deployment-management
 packages/kbn-mapbox-gl @elastic/kibana-gis
 x-pack/examples/third_party_maps_source_example @elastic/kibana-gis
