--- a/packages/shared-ux/page/no_data/impl/tsconfig.json
+++ b/packages/shared-ux/page/no_data/impl/tsconfig.json
@@ -20,6 +20,7 @@
     "@kbn/shared-ux-page-no-data-mocks",
     "@kbn/i18n",
     "@kbn/i18n-react",
+    "@kbn/shared-ux-avatar-solution",
   ],
   "exclude": [
     "target/**/*",
