--- a/x-pack/plugins/spaces/tsconfig.json
+++ b/x-pack/plugins/spaces/tsconfig.json
@@ -31,6 +31,7 @@
     "@kbn/core-custom-branding-common",
     "@kbn/shared-ux-link-redirect-app",
     "@kbn/config",
+    "@kbn/shared-ux-avatar-solution",
   ],
   "exclude": [
     "target/**/*",
