[CI] Auto-commit changed files from 'node scripts/lint_ts_projects --fix'

--- a/packages/kbn-search-response-warnings/tsconfig.json
+++ b/packages/kbn-search-response-warnings/tsconfig.json
@@ -13,6 +13,7 @@
     "@kbn/es-types",
     "@kbn/react-kibana-mount",
     "@kbn/core-i18n-browser",
+    "@kbn/core-notifications-browser-mocks",
   ],
   "exclude": ["target/**/*"]
 }
