--- a/x-pack/plugins/high_cardinality_indexer/tsconfig.json
+++ b/x-pack/plugins/high_cardinality_indexer/tsconfig.json
@@ -11,6 +11,18 @@
     "public/**/*.json",
     "server/**/*"
   ],
-  "kbn_references": [],
+  "kbn_references": [
+    "@kbn/core",
+    "@kbn/kibana-react-plugin",
+    "@kbn/shared-ux-link-redirect-app",
+    "@kbn/shared-ux-router",
+    "@kbn/react-kibana-context-theme",
+    "@kbn/i18n",
+    "@kbn/logging",
+    "@kbn/observability-shared-plugin",
+    "@kbn/safer-lodash-set",
+    "@kbn/server-route-repository",
+    "@kbn/rule-registry-plugin",
+  ],
   "exclude": ["target/**/*"]
 }
