--- a/packages/kbn-reporting/common/kibana.jsonc
+++ b/packages/kbn-reporting/common/kibana.jsonc
@@ -1,5 +1,8 @@
 {
   "type": "shared-common",
   "id": "@kbn/reporting-common",
-  "owner": "@elastic/appex-sharedux"
+  "owner": "@elastic/appex-sharedux",
+  "plugin": {
+    "requiredBundles": ["kibanaUtils"]
+  }
 }
