--- a/config/serverless.security.yml
+++ b/config/serverless.security.yml
@@ -42,3 +42,4 @@ xpack.fleet.internal.registry.spec.max: '3.0'
 xpack.ml.ad.enabled: true
 xpack.ml.dfa.enabled: true
 xpack.ml.nlp.enabled: false
+xpack.ml.compatibleModuleType: 'security'
