--- a/x-pack/plugins/ml/server/models/data_recognizer/modules/logs_ui_categories/manifest.json
+++ b/x-pack/plugins/ml/server/models/data_recognizer/modules/logs_ui_categories/manifest.json
@@ -16,5 +16,6 @@
       "file": "datafeed_log_entry_categories_count.json",
       "job_id": "log-entry-categories-count"
     }
-  ]
+  ],
+  "tags": ["logs"]
 }
