[CI] Auto-commit changed files from 'node scripts/lint_ts_projects --fix'

--- a/x-pack/examples/reporting_example/tsconfig.json
+++ b/x-pack/examples/reporting_example/tsconfig.json
@@ -25,5 +25,8 @@
     "@kbn/i18n-react",
     "@kbn/utility-types",
     "@kbn/shared-ux-router",
+    "@kbn/reporting-common",
+    "@kbn/reporting-export-types-png",
+    "@kbn/reporting-export-types-deprecated",
   ]
 }
