--- a/config/serverless.oblt.yml
+++ b/config/serverless.oblt.yml
@@ -27,7 +27,7 @@ xpack.apm.serverlessOnboarding: true
 
 # Fleet specific configuration
 xpack.fleet.internal.registry.capabilities: ['apm', 'observability']
-xpack.fleet.internal.registry.kibanaVersionCheckEnabled: true
+xpack.fleet.internal.registry.kibanaVersionCheckEnabled: false
 xpack.fleet.internal.registry.spec.min: '1.0'
 # Temporary until all packages implement new spec https://github.com/elastic/kibana/issues/166742
 xpack.fleet.internal.registry.spec.max: '3.0'
