--- a/x-pack/plugins/observability/kibana.jsonc
+++ b/x-pack/plugins/observability/kibana.jsonc
@@ -20,7 +20,6 @@
       "exploratoryView",
       "features",
       "files",
-      "guidedOnboarding",
       "inspector",
       "lens",
       "observabilityShared",
@@ -33,7 +32,7 @@
       "visualizations",
       "dashboard",
     ],
-    "optionalPlugins": ["discover", "home", "licensing", "usageCollection", "cloud", "spaces"],
+    "optionalPlugins": ["discover", "home", "licensing", "usageCollection", "cloud", "spaces", "guidedOnboarding"],
     "requiredBundles": ["data", "kibanaReact", "kibanaUtils", "unifiedSearch", "stackAlerts", "spaces"],
     "extraPublicDirs": ["common"]
   }
