[CI] Auto-commit changed files from 'node scripts/lint_ts_projects --fix'

--- a/x-pack/plugins/security_solution/tsconfig.json
+++ b/x-pack/plugins/security_solution/tsconfig.json
@@ -183,6 +183,7 @@
     "@kbn/unified-data-table",
     "@kbn/unified-doc-viewer",
     "@kbn/dom-drag-drop",
-    "@kbn/unified-field-list"
+    "@kbn/unified-field-list",
+    "@kbn/resizable-layout"
   ]
 }
