--- a/packages/kbn-es/src/serverless_resources/roles.yml
+++ b/packages/kbn-es/src/serverless_resources/roles.yml
@@ -491,8 +491,6 @@ endpoint_operations_analyst:
         - logs-*
         - packetbeat-*
         - winlogbeat-*
-        - .lists*
-        - .items*
       privileges:
         - read
     - names:
@@ -500,9 +498,13 @@ endpoint_operations_analyst:
         - .siem-signals-*
         - .preview.alerts-security*
         - .internal.preview.alerts-security*
+        - .lists-*
+        - .items-*
       privileges:
         - read
         - write
+        - maintenance
+        - view_index_metadata
   applications:
     - application: "kibana-.kibana"
       privileges:
@@ -526,6 +528,7 @@ endpoint_operations_analyst:
         - feature_osquery.all
         - feature_fleet.all
         - feature_fleetv2.all
+        - feature_indexPatterns.read
       resources: "*"
 
 endpoint_policy_manager:
