update all other role files to be consistent
refs 4ba05d4083bfb21a467e7677ae9258c14dab4887

--- a/x-pack/plugins/security_solution/scripts/endpoint/common/roles_users/serverless/es_serverless_resources/roles.yml
+++ b/x-pack/plugins/security_solution/scripts/endpoint/common/roles_users/serverless/es_serverless_resources/roles.yml
@@ -494,8 +494,6 @@ endpoint_operations_analyst:
         - logs-*
         - packetbeat-*
         - winlogbeat-*
-        - .lists*
-        - .items*
       privileges:
         - read
     - names:
@@ -503,9 +501,13 @@ endpoint_operations_analyst:
         - .siem-signals-*
         - .preview.alerts-security*
         - .internal.preview.alerts-security*
+        - .lists-*
+        - .items-*
       privileges:
         - read
         - write
+        - maintenance
+        - view_index_metadata
   applications:
     - application: "kibana-.kibana"
       privileges:
@@ -529,6 +531,7 @@ endpoint_operations_analyst:
         - feature_osquery.all
         - feature_fleet.all
         - feature_fleetv2.all
+        - feature_indexPatterns.read
       resources: "*"
 
 endpoint_policy_manager:
