--- a/x-pack/plugins/serverless_search/tsconfig.json
+++ b/x-pack/plugins/serverless_search/tsconfig.json
@@ -30,6 +30,7 @@
     "@kbn/management-cards-navigation",
     "@kbn/core-elasticsearch-server",
     "@kbn/search-api-panels",
+    "@kbn/search-index-documents",
     "@kbn/serverless-search-settings",
     "@kbn/core-lifecycle-browser",
     "@kbn/react-kibana-context-theme",
@@ -39,5 +40,7 @@
     "@kbn/kibana-utils-plugin",
     "@kbn/index-management-plugin",
     "@kbn/usage-collection-plugin",
+    "@kbn/core-http-browser",
+    "@kbn/es-types",
   ]
 }
